--- a/examples/detailed_list/CMakeLists.txt
+++ b/examples/detailed_list/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(detailed_list detailed_list.cpp)
-target_link_libraries(detailed_list cppintrospection)
+target_link_libraries(detailed_list cppintrospection ${OPENSCENEGRAPH_LIBRARIES})
