add "examples" target and make the simple example build

--- a/examples/detailed_list/CMakeLists.txt
+++ b/examples/detailed_list/CMakeLists.txt
@@ -1,2 +1,8 @@
-add_executable(detailed_list detailed_list.cpp)
-target_link_libraries(detailed_list cppintrospection ${OPENSCENEGRAPH_LIBRARIES})
+find_package(OpenSceneGraph COMPONENTS osgDB)
+if(OPENSCENEGRAPH_FOUND)
+	include_directories(${OPENSCENEGRAPH_INCLUDE_DIRS})
+	add_executable(detailed_list detailed_list.cpp)
+	target_link_libraries(detailed_list cppintrospection ${OPENSCENEGRAPH_LIBRARIES})
+	add_dependencies(detailed_list osgwrapper_osg)
+	add_dependencies(examples detailed_list)
+endif()
