update the list of ignored files in osgViewer for osg trunk

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -45,12 +45,21 @@ ignore file "osgDB/fstream"
 
 ignore file "osgUtil/OperationArrayFunctor"
 
+# generated with this command from the osg source tree:
+# cd include && find osgViewer/api -name "*Graphics*" -o -name "*Pixel*" | sed 's/^\(.*\)/ignore file "\1"/'
 ignore file "osgViewer/api/X11/GraphicsWindowX11"
 ignore file "osgViewer/api/X11/PixelBufferX11"
+ignore file "osgViewer/api/X11/GraphicsHandleX11"
+ignore file "osgViewer/api/Carbon/GraphicsHandleCarbon"
+ignore file "osgViewer/api/Carbon/GraphicsWindowCarbon"
+ignore file "osgViewer/api/Carbon/PixelBufferCarbon"
+ignore file "osgViewer/api/Win32/GraphicsHandleWin32"
 ignore file "osgViewer/api/Win32/GraphicsWindowWin32"
 ignore file "osgViewer/api/Win32/PixelBufferWin32"
-ignore file "osgViewer/api/Cocoa/GraphicsWindowCocoa"
+ignore file "osgViewer/api/Cocoa/GraphicsHandleCocoa"
 ignore file "osgViewer/api/Cocoa/PixelBufferCocoa"
+ignore file "osgViewer/api/Cocoa/GraphicsWindowCocoa"
+ignore file "osgViewer/api/IOS/GraphicsWindowIOS"
 
 # these two won't parse because of the "degrees" symbol in XML
 ignore file "osgParticle/FluidFrictionOperator"
