--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -106,6 +106,11 @@ configure file /osgViewer\/ViewerBase/
 	"
 end
 
+configure file /osgViewer\/GraphicsWindow/
+	emit before "#include <osgViewer/View>
+	"
+end
+
 configure file /osg\/BoundingBox/
 	emit before "#include <osg/BoundingSphere>
 	"
