fix osg/Camera reflector on 3.0/trunk

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -644,3 +644,33 @@ configure reflector "osgShadow::ConvexPolyhedron"
 		replace with ""
 	end
 end
+
+#############################################################################
+
+#
+
+configure reflector "osg::Camera::Attachment"
+	configure method /.*__int__width.*/
+		replace with "I_Method0(int, width,
+	          Properties::NON_VIRTUAL,
+	          __int__width,
+	          \"\",
+	          \"\");"
+	end
+
+	configure method /.*__int__height.*/
+		replace with "I_Method0(int, height,
+	          Properties::NON_VIRTUAL,
+	          __int__height,
+	          \"\",
+	          \"\");"
+	end
+
+	configure method /.*__int__depth.*/
+		replace with "I_Method0(int, depth,
+	          Properties::NON_VIRTUAL,
+	          __int__depth,
+	          \"\",
+	          \"\");"
+	end
+end
