--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -359,134 +359,14 @@ suppress reflector "osg::GL2Extensions"
 suppress reflector "osg::FBOExtensions"
 suppress reflector "osgSim::ShapeAttribute"
 
-configure reflector "osg::BufferObject::Extensions"
-	configure method "__typedef__void__APIENTRY_P1"
-		replace with ""
-	end
-	configure method "__typedef__GLboolean__APIENTRY_P1"
-		replace with ""
-	end
-end
-
-configure reflector "osg::Drawable::Extensions"
-	configure method "__typedef__void__APIENTRY_P1"
-		replace with ""
-	end
-	configure method "__typedef__GLboolean__APIENTRY_P1"
-		replace with ""
-	end
-end
-
-configure reflector "osg::BlendColor::Extensions"
-	configure method "__typedef__void__APIENTRY_P1"
-		replace with ""
-	end
-	configure method "__typedef__GLboolean__APIENTRY_P1"
-		replace with ""
-	end
-end
-
-configure reflector "osg::BlendEquation::Extensions"
-	configure method "__typedef__void__APIENTRY_P1"
-		replace with ""
-	end
-	configure method "__typedef__GLboolean__APIENTRY_P1"
-		replace with ""
-	end
-end
-
-configure reflector "osg::BlendFunc::Extensions"
-	configure method "__typedef__void__APIENTRY_P1"
-		replace with ""
-	end
-	configure method "__typedef__GLboolean__APIENTRY_P1"
-		replace with ""
-	end
-end
-
-configure reflector "osg::FragmentProgram::Extensions"
-	configure method "__typedef__void__APIENTRY_P1"
-		replace with ""
-	end
-	configure method "__typedef__GLboolean__APIENTRY_P1"
-		replace with ""
-	end
-end
-
-configure reflector "osg::VertexProgram::Extensions"
-	configure method "__typedef__void__APIENTRY_P1"
-		replace with ""
-	end
-	configure method "__typedef__GLboolean__APIENTRY_P1"
-		replace with ""
-	end
-end
-
-configure reflector "osg::StencilTwoSided::Extensions"
-	configure method "__typedef__void__APIENTRY_P1"
-		replace with ""
-	end
-	configure method "__typedef__GLboolean__APIENTRY_P1"
-		replace with ""
-	end
-end
-
-configure reflector "osg::Texture3D::Extensions"
-	configure method "__typedef__void__APIENTRY_P1"
-		replace with ""
-	end
-	configure method "__typedef__GLboolean__APIENTRY_P1"
-		replace with ""
-	end
-end
-
-configure reflector "osg::Multisample::Extensions"
-	configure method "__typedef__void__APIENTRY_P1"
-		replace with ""
-	end
-	configure method "__typedef__GLboolean__APIENTRY_P1"
-		replace with ""
-	end
-end
-
-configure reflector "osg::Point::Extensions"
-	configure method "__typedef__void__APIENTRY_P1"
-		replace with ""
-	end
-	configure method "__typedef__GLboolean__APIENTRY_P1"
-		replace with ""
-	end
-end
-
-configure reflector "osg::ClampColor::Extensions"
-	configure method "__typedef__void__APIENTRY_P1"
-		replace with ""
-	end
-	configure method "__typedef__GLboolean__APIENTRY_P1"
-		replace with ""
-	end
-end
-
-configure reflector "osg::Texture::Extensions"
-	configure method "__typedef__void__APIENTRY_P1"
-		replace with ""
-	end
-	configure method "__typedef__GLboolean__APIENTRY_P1"
-		replace with ""
-	end
-end
-
-configure reflector "osg::Texture2DArray::Extensions"
-	configure method "__typedef__void__APIENTRY_P1"
-		replace with ""
-	end
-	configure method "__typedef__GLboolean__APIENTRY_P1"
+configure reflector /osg::[^:]+::Extensions/
+	configure method /__typedef__[a-zA-Z]+__(GL_)?APIENTRY_P1/
 		replace with ""
 	end
 end
 
 configure reflector "osg::State"
-	configure method "__typedef__void__APIENTRY_P1"
+	configure method /__typedef__[a-zA-Z]+__(GL_)?APIENTRY_P1/
 		replace with ""
 	end
 end
