include <osg/GL> in osgDB/DataTypes - needed for 3.0

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -121,6 +121,11 @@ configure file /osg\/BoundingSphere/
 	"
 end
 
+configure file /osgDB\/DataTypes/
+	emit before "#include <osg/GL>
+	"
+end
+
 #############################################################################
 
 # add <io_utils> header to Plane, Quat and Vec* files
