can't actually build osgDB/DataTypes, but we can build DatabaseRevisions if we add the observer_ptr include

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -65,6 +65,9 @@ ignore file "osgViewer/api/IOS/GraphicsWindowIOS"
 ignore file "osgParticle/FluidFrictionOperator"
 ignore file "osgParticle/FluidProgram"
 
+# This one needs osg/GL at the top.
+ignore file "osgDB/DataTypes"
+
 suppress reflector "osgUtil::AddRangeFunctor"
 suppress reflector "osgUtil::MultiplyRangeFunctor"
 
@@ -121,11 +124,10 @@ configure file /osg\/BoundingSphere/
 	"
 end
 
-configure file /osgDB\/DataTypes/
-	emit before "#include <osg/GL>
+configure file /osgDB\/DatabaseRevisions/
+	emit before "#include <osg/observer_ptr>
 	"
 end
-
 #############################################################################
 
 # add <io_utils> header to Plane, Quat and Vec* files
