Override mis-parsing of a function type typedef in osgdb

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -391,6 +391,10 @@ configure reflector "osgWidget::MouseHandler::MouseEvent"
     replace with ""
 end
 
+configure reflector "osgDB::RegisterWrapperProxy::AddPropFunc"
+	replace with "TYPE_NAME_ALIAS(void*(osgDB::ObjectWrapper*), osgDB::RegisterWrapperProxy::AddPropFunc)"
+end
+
 #############################################################################
 
 # avoid functions using raw template parameters in signature
