--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -321,6 +321,10 @@ configure reflector "osg::GraphicsContext"
 	abstract-object-type
 end
 
+configure reflector "osgDB::ExternalFileWriter"
+	object-type
+end
+
 #############################################################################
 
 # Suppress scoped lock template
