--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -128,6 +128,11 @@ configure file /osgDB\/DatabaseRevisions/
 	emit before "#include <osg/observer_ptr>
 	"
 end
+
+configure file /osgDB\/PluginQuery/
+	emit before "#include <osg/observer_ptr>
+	"
+end
 #############################################################################
 
 # add <io_utils> header to Plane, Quat and Vec* files
