Streams are object types, not value types

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -330,6 +330,10 @@ configure reflector "osgDB::ExternalFileWriter"
 	object-type
 end
 
+configure reflector /osgDB::.*Stream/
+	object-type
+end
+
 #############################################################################
 
 # Suppress scoped lock template
