more breakage-fixing related to osgDB/DataTypes

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -65,8 +65,9 @@ ignore file "osgViewer/api/IOS/GraphicsWindowIOS"
 ignore file "osgParticle/FluidFrictionOperator"
 ignore file "osgParticle/FluidProgram"
 
-# This one needs osg/GL at the top.
+# This one needs osg/GL at the top. Until then, it breaks other things.
 ignore file "osgDB/DataTypes"
+ignore file "osgDB/StreamOperator"
 
 suppress reflector "osgUtil::AddRangeFunctor"
 suppress reflector "osgUtil::MultiplyRangeFunctor"
