Skip Serializer because of too many function typedefs

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -69,6 +69,9 @@ ignore file "osgParticle/FluidProgram"
 ignore file "osgDB/DataTypes"
 ignore file "osgDB/StreamOperator"
 
+# A lot of function type typedefs - just ditch the whole file for now
+ignore file "osgDB/Serializer"
+
 suppress reflector "osgUtil::AddRangeFunctor"
 suppress reflector "osgUtil::MultiplyRangeFunctor"
 
