DatabasePager should skip methods with protected types

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -475,6 +475,12 @@ configure reflector "osgDB::Registry"
 	end
 end
 
+configure reflector "osgDB::DatabasePager"
+	configure method /.*_(DatabaseRequest|RequestQueue|ReadQueue)_.*/
+		replace with ""
+	end
+end
+
 configure reflector "osgText::FadeText"
 	configure method /.*_ViewBlendColou?rMap_.*/
 		replace with ""
