work around name qualification bugs

--- a/src/genwrapper/genwrapper.conf
+++ b/src/genwrapper/genwrapper.conf
@@ -137,6 +137,18 @@ configure file /osgDB\/PluginQuery/
 	emit before "#include <osg/observer_ptr>
 	"
 end
+
+# Work around failures to fully qualify name
+configure file /osgDB\/.*Stream/
+	emit before "typedef osgDB::OutputIterator OutputIterator;
+	typedef osgDB::InputIterator InputIterator;
+	"
+end
+
+configure file /osgDB\/ObjectWrapper/
+	emit before "using namespace osgDB;
+	"
+end
 #############################################################################
 
 # add <io_utils> header to Plane, Quat and Vec* files
