Start adding some tests to verify the fix for the conversion to const pointer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,10 @@ set(CPACK_PACKAGE_VERSION
 option(BUILD_GENWRAPPER "Build the wrapper generation tool?" ON)
 option(BUILD_WRAPPERS "Build the wrappers for OpenSceneGraph?" OFF)
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
+include(CTest)
+
 set(CPPINTROSPECTION_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include")
 find_package(Doxygen)
 find_package(OpenGL)
@@ -42,6 +46,9 @@ add_definitions(-DCPPINTROSPECTION_CMAKE)
 add_subdirectory(src)
 add_subdirectory(examples)
 
+if(BUILD_TESTING)
+    add_subdirectory(tests)
+endif()
 ###
 # Create config files to allow easy use of this library
 ###
