Move ConverterList typedef into its own file for a single point of truth.

--- a/src/cppintrospection/CMakeLists.txt
+++ b/src/cppintrospection/CMakeLists.txt
@@ -19,6 +19,7 @@ set(HEADERS
 	../../include/cppintrospection/Comparator
 	../../include/cppintrospection/ConstructorInfo
 	../../include/cppintrospection/Converter
+	../../include/cppintrospection/ConverterList
 	../../include/cppintrospection/ConverterProxy
 	../../include/cppintrospection/CustomAttribute
 	../../include/cppintrospection/CustomAttributeProvider
